[package]
authors = ["Alexander Antonio Gonzalez Fertel"]
name = "wfc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/alexfertel/wfc"
homepage = "https://github.com/alexfertel/wfc"
documentation = "https://github.com/alexfertel/wfc"
description = """
A port of the Wave Function Collapse algorithm to Rust.
"""
keywords = ["textures", "algorithm", "wfc", "cli", "image"]
categories = []
exclude = ["/.github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
image = "0.24.6"
itertools = "0.11.0"
rand = "0.8.5"
rustc-hash = "1.1.0"

[dev-dependencies]
pretty_assertions = { version= "1.4.0" }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
